--- a/adapter/build.gradle
+++ b/adapter/build.gradle
@@ -1,5 +1,29 @@
 apply plugin: 'com.android.library'
 
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'adapter'
+
+    publishedGroupId = 'cn.junhua.android.adapter'
+    libraryName = 'adapter'
+    artifact = 'commonadapter'
+
+    libraryDescription = 'some common for ListView and RecyclerView on Android'
+
+    siteUrl = 'https://github.com/JunhuaLin/CommonAdapter'
+    gitUrl = 'https://github.com/JunhuaLin/CommonAdapter.git'
+
+    libraryVersion = '1.0.0'
+
+    developerId = 'linjunhua'
+    developerName = 'linjunhua'
+    developerEmail = 'linjunhua92@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -25,3 +49,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:recyclerview-v7:25.2.0'
 }
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+
