--- a/adapter/build.gradle
+++ b/adapter/build.gradle
@@ -47,6 +47,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:25.2.0'
 }
 
