--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    testCompile 'junit:junit:4.12'
-    compile project(':adapter')
-    compile 'com.android.support:recyclerview-v7:25.2.0'
-    compile 'com.android.support:cardview-v7:25.2.0'
+    implementation 'com.android.support:appcompat-v7:25.2.0'
+    testImplementation 'junit:junit:4.12'
+    implementation project(':adapter')
+    implementation 'com.android.support:recyclerview-v7:25.2.0'
+    implementation 'com.android.support:cardview-v7:25.2.0'
+    implementation 'cn.junhua.android.view:indicatorviewlibrary:1.0.0'
+    implementation 'com.youth.banner:banner:1.4.10'
+    compile('com.github.bumptech.glide:glide:3.7.0') {
+        exclude group: 'com.android.support'
+    }
 }
