--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
             android:name=".activity.MultiTypeRecyclerViewAdapterActivity"
             android:label="@string/common_recycler"
             android:launchMode="singleTop" />
+
+        <activity
+            android:name=".activity.TaobaoActivity"
+            android:label="@string/common_recycler"
+            android:launchMode="singleTop" />
     </application>
 
 </manifest>
