1.修改批量注册ViewBinder没有设置Adapter问题.2.ViewHolder中添加getRecyclerVIew()方法

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
             android:name=".activity.TaobaoActivity"
             android:label="@string/taobao"
             android:launchMode="singleTop" />
+
+        <activity
+            android:name=".activity.BasisActivity"
+            android:label="@string/basis"
+            android:launchMode="singleTop" />
     </application>
 
 </manifest>
