更新demo 添加setDefaultViewBinder方法使用实例

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
             android:name=".activity.BasisActivity"
             android:label="@string/basis"
             android:launchMode="singleTop" />
+        <activity
+            android:name=".activity.DefaultViewBinderActivity"
+            android:label="@string/default_view_binder"
+            android:launchMode="singleTop" />
     </application>
 
 </manifest>
