feat(*):设计思路调整

--- a/multitypeadapter/build.gradle
+++ b/multitypeadapter/build.gradle
@@ -53,6 +53,6 @@ dependencies {
     implementation rootProject.ext.supportLib['support-annotations']
 }
 
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+//apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+//apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
 
